<resources>
    <string name="app_name">Autonomia Ossigeno</string>
    <string name="capacity">Capacità bombola (l.)</string>
    <string name="pressure">Pressione bombola (atm.)</string>
    <string name="consumption">Consumo (l/min.)</string>
    <string name="calculate">Calcola</string>
    <string name="clear">Pulisci</string>
    <string name="autonomia">Autonomia:</string>
    <string name="bombola">Bombola</string>
    <string name="bombolino">Bombolino</string>
    <string name="load_default">Carica default per:</string>
    <string name="autonomia_result">%1$d min.</string>
</resources>
